<resources>
    <string name="app_name">AndroidExercises</string>
    <string name="add_contact">Add Contact</string>
    <string name="setting">Setting</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="favorite">Favorite</string>
    <string name="tours_name">Tour Name</string>
    <string name="tours_description">Tour Description</string>

    <!--    Recycler View Data-->
    <string-array name="data_name">
        <item>Danau Toba</item>
        <item>Gunung Rinjani</item>
        <item>Kepulauan Derawan</item>
        <item>Nusa Dua Bali</item>
        <item>Nusa Penida</item>
        <item>Pantai Parai Tenggiri</item>
        <item>Pura Besakih</item>
        <item>Taman Laut Bunaken</item>
        <item>Taman Nasional Way Kambas</item>
    </string-array>

    <string-array name="data_description">
        <item>Danau Toba adalah danau terbesar di Indonesia dan juga di Asia Tenggara. Danau ini terletak di Sumatera Utara, Indonesia. Danau ini berada di dalam kawasan pegunungan, dan terletak di antara dua pegunungan, yaitu Pegunungan Barisan dan Pegunungan Toba. Danau ini berada di atas ketinggian 1.300 meter di atas permukaan laut.</item>
        <item>Gunung Rinjani adalah gunung berapi yang terletak di Pulau Lombok, Nusa Tenggara Barat, Indonesia. Gunung ini merupakan gunung berapi tertinggi kedua di Indonesia setelah Gunung Kerinci di Sumatra. Gunung ini juga merupakan gunung berapi tertinggi di Pulau Lombok dan Pulau Bali. Gunung ini memiliki ketinggian 3.726 meter di atas permukaan laut.</item>
        <item>Kepulauan Derawan adalah sebuah kawasan wisata di Kalimantan Timur, Indonesia. Kepulauan ini terdiri dari 13 pulau, yaitu Pulau Derawan, Pulau Kakaban, Pulau Maratua, Pulau Berau, Pulau Berau Besar, Pulau Berau Kecil, Pulau Berau Tengah, Pulau Berau Utara, Pulau Berau Selatan, Pulau Berau Timur, Pulau Berau Barat, Pulau Berau Tenggara, dan Pulau Berau Tenggara. Kepulauan Derawan terletak di sebelah barat laut Pulau Kalimantan.</item>
        <item>Nusa Dua adalah sebuah kawasan wisata di Bali, Indonesia. Nusa Dua terletak di sebelah timur Pulau Bali. Nusa Dua terdiri dari beberapa kawasan wisata, yaitu Nusa Dua Beach, Nusa Dua Convention Center, Nusa Dua Golf Club, dan Nusa Dua Theater. Nusa Dua juga terkenal dengan pantai-pantainya yang indah.</item>
        <item>Nusa Penida adalah sebuah pulau di Bali, Indonesia. Nusa Penida terletak di sebelah timur Pulau Bali. Nusa Penida terdiri dari beberapa pulau kecil, yaitu Pulau Nusa Penida, Pulau Nusa Lembongan, Pulau Nusa Ceningan, Pulau Nusa Kembangan, Pulau Nusa Penida Kecil, Pulau Nusa Penida Besar, Pulau Nusa Penida Tengah, Pulau Nusa Penida Utara, Pulau Nusa Penida Selatan, Pulau Nusa Penida Timur, Pulau Nusa Penida Barat, Pulau Nusa Penida Tenggara, dan Pulau Nusa Penida Barat Daya.</item>
        <item>Pantai Parai Tenggiri adalah sebuah pantai di Pulau Lombok, Nusa Tenggara Barat, Indonesia. Pantai ini terletak di sebelah barat Pulau Lombok. Pantai ini memiliki pasir putih dan pantai ini juga memiliki pemandangan laut yang indah. Pantai ini terletak di sebelah barat Pulau Lombok. Pantai ini berada di antara dua gunung, yaitu Gunung Rinjani dan Gunung Batu Karu. Pantai ini memiliki pasir putih dan pantai ini juga memiliki pemandangan laut yang indah. Pantai ini memiliki panjang sekitar 500 meter dan lebar sekitar 150 meter. Pantai ini memiliki pasir putih dan pantai ini juga memiliki pemandangan laut yang indah. Pantai ini memiliki panjang sekitar 500 meter dan lebar sekitar 150 meter.</item>
        <item>Pura Besakih adalah sebuah pura Hindu di Bali, Indonesia. Pura Besakih terletak di sebelah timur Pulau Bali. Pura Besakih terletak di sebelah timur Pulau Bali. Pura Besakih terletak di sebelah timur Pulau Bali. Pura Besakih terletak di sebelah timur Pulau Bali. Pura Besakih terletak di sebelah timur Pulau Bali. Pura Besakih terletak di sebelah timur Pulau Bali.</item>
        <item>Taman Laut Bunaken adalah sebuah taman laut di Sulawesi Utara, Indonesia. Taman laut ini terletak di sebelah utara Pulau Sulawesi. Taman laut ini terletak di sebelah utara Pulau Sulawesi. Taman laut ini terletak di sebelah utara Pulau Sulawesi. Taman laut ini terletak di sebelah utara Pulau Sulawesi. Taman laut ini terletak di sebelah utara Pulau Sulawesi.</item>
        <item>Taman Nasional Way Kambas adalah sebuah taman nasional di Sumatera Selatan, Indonesia. Taman Nasional Way Kambas terletak di sebelah barat Pulau Sumatera. Taman Nasional Way Kambas terletak di sebelah barat Pulau Sumatera. Taman Nasional Way Kambas terletak di sebelah barat Pulau Sumatera.</item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/danau_toba</item>
        <item>@drawable/gunung_rinjani</item>
        <item>@drawable/kepulauan_derawan</item>
        <item>@drawable/nusa_dua_bali</item>
        <item>@drawable/nusa_penida</item>
        <item>@drawable/pantai_parai_tenggiri</item>
        <item>@drawable/pura_besakih</item>
        <item>@drawable/taman_laut_bunaken</item>
        <item>@drawable/taman_nasional_way_kambas</item>
    </integer-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>